# nftli

./: .gitignore  Cargo.toml  README.md  binary.sh  rust-toolchain.toml
.github/workflows/: release.yml
src/: main.rs
