[package]
name = "nftli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.6.2"
tokio = { version = "1.18.2", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
eyre = "0.6.8"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0"
colorize = '0.1.0'
viuer = "0.6"
image = "0.24.2"
cli-table = "0.4.7"